--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Guided Inquiry - Oscar H Viquez :)</title>
 
 </head>
 
 <body>
 
-    <div class="container">
-        <div class="card" id="card">
+    <div>
+        <div>
             <h1>
                 Name
             </h1>
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <script src="/js/3-medium.js"></script>
+    <script src="/js/5-very-hard.js"></script>
 
 </body>
 
